# digibankup

./: .gitignore  README.md  pyproject.toml  voorbeeld.ini
src/digibankup/: __init__.py  __main__.py  backup.py  backupsinfo.py  config.py  fog.py  logging.py  mount.py  snipeit.py  util.py
