[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digibankup"
version = "0.0.2"
authors = [
  { name="Raf Vosté", email="r.voste@gmail.com" },
]
description = "A small package that backups data for Digibank Mechelen."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "requests",
    "click",
]
